data/derived/comb/progs/unify/prog5756.ml.out
Characters 180-184:
  List.fold_left f base l;;
                   ^^^^
Error: This expression has type string list
       but an expression was expected of type string
